fixes for site name spacing

--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -67,6 +67,11 @@ h1 {
       text-decoration: none;
     }
   }
+
+  .site-name-long & {
+    font-size: 20px;
+    line-height: 25px;
+  }
 }
 
 
@@ -357,6 +362,7 @@ var {
   // display: inline-block;
   float: left;
   vertical-align: top;
+  width: 395px;
 }
 
 
@@ -380,6 +386,11 @@ var {
   display: inline-block;
   vertical-align: top;
   margin-top: 14px;
+  width: 333px;
+
+  .site-name-long & {
+    margin-top: 6px;
+  }
 }
 
 
@@ -748,7 +759,7 @@ a {
   // margin-right: -3px;
   float: left;
   vertical-align: top;
-  margin:0 0 0 55px;
+  margin:0;
 
   ul,
   ul.menu {
@@ -1535,7 +1546,7 @@ ul.action-links {
 .pane-commons-featured-panel-pane-1,
 .pane-commons-events-upcoming {
   .block-inner {
-    padding:0 0 15px 0;
+    // padding:0 0 15px 0;
     margin:0;
     .pane-title {
       padding:20px 20px 0 20px;
@@ -1560,7 +1571,7 @@ ul.action-links {
   }
 }
 
-.pane-commons-radioactivity-groups-most-active-panel-pane-1 {
+.pane-commons-radioactivity-groups-most-active-panel-pane-1, .pane-commons-activity-streams-activity-panel-pane-1, .pane-commons-featured-panel-pane-1, .pane-commons-groups-contributors-panel-pane-1 {
   @extend %pod;
 
   > .block-inner {
@@ -1765,90 +1776,90 @@ ul.action-links {
       margin-top:1px;
     }
   }
+}
 
-  .pane-commons-groups-recent-content {
-    width: 50%;
-    float: left;
-    margin-bottom: 0;
+.pane-commons-groups-recent-content {
+  width: 50%;
+  float: left;
+  margin-bottom: 0;
 
-    .pane-title {
-      display: block;
-      font-size: 16px;
-      line-height: 1em;
-    }
+  .pane-title {
+    display: block;
+    font-size: 16px;
+    line-height: 1em;
+  }
+}
+
+.pane-commons-contributors-group-panel-pane-1 {
+  width: 50%;
+  float: left;
+  margin-bottom: 0;
+
+  .pane-title {
+    display: block;
+    font-size: 16px;
+    line-height: 1em;
   }
 
-  .pane-commons-contributors-group-panel-pane-1 {
-    width: 50%;
+  table, tbody {
+    margin: 0;
+    border: none;
+  }
+
+  tbody tr {
+    background-color: transparent;
+    border: none;
+  }
+
+  td {
+    padding: 0;
+    margin: 0 1px 1px 0;
     float: left;
-    margin-bottom: 0;
+    line-height: 0;
 
-    .pane-title {
+    a {
+      position: relative;
       display: block;
-      font-size: 16px;
-      line-height: 1em;
-    }
+      
+      img {
+        @include opacity(0.5);
+      }
 
-    table, tbody {
-      margin: 0;
-      border: none;
-    }
+      span {
+        display: none;
+        position: absolute;
+        top: -100%;
+        background-color: rgba(#000, 0.85);
+        white-space: nowrap;
+        font-size: 14px;
+        line-height: 14px;
+        font-weight: bold;
+        padding: 5px 8px;
+        color: $white;
+        @include border-radius(4px);
+        z-index: 15;
 
-    tr {
-      background-color: transparent;
-      border: none;
-    }
+        &:after {
+          content: '';
+          display: block;
+          width: 0px;
+          height: 0px;
+          border-style: solid;
+          border-width: 5px 5px 0 5px;
+          border-color: rgba(#000, 0.85) transparent transparent transparent;
+          position: absolute;
+          left: 10px;
+          top: 100%;
+        }
+      }
 
-    td {
-      padding: 0;
-      margin: 0 1px 1px 0;
-      float: left;
-      line-height: 0;
-
-      a {
-        position: relative;
-        display: block;
-        
+      &:hover {
         img {
-          @include opacity(0.5);
+          @include opacity(1);
         }
 
         span {
-          display: none;
-          position: absolute;
-          top: -100%;
-          background-color: rgba(#000, 0.85);
-          white-space: nowrap;
-          font-size: 14px;
-          line-height: 14px;
-          font-weight: bold;
-          padding: 5px 8px;
-          color: $white;
-          @include border-radius(4px);
-          z-index: 15;
-
-          &:after {
-            content: '';
-            display: block;
-            width: 0px;
-            height: 0px;
-            border-style: solid;
-            border-width: 5px 5px 0 5px;
-            border-color: rgba(#000, 0.85) transparent transparent transparent;
-            position: absolute;
-            left: 10px;
-            top: 100%;
-          }
-        }
-
-        &:hover {
-          img {
-            @include opacity(1);
-          }
-
-          span {
-            display: block;
-          }
+          display: block;
         }
       }
     }
@@ -2222,9 +2233,13 @@ ul.action-links {
  */
 .block-search {
   display:block;
-  background-image:image-url('bkg_search.png');
-  background-repeat:no-repeat;
-  width:304px;
+  // needs latest Compass, add '@import "compass"' to your scss
+  background-color: #03416a; // Old browsers
+  @include filter-gradient(#03416a, #00558b, vertical); // IE6-9
+  @include background-image(linear-gradient(top,  #03416a 0%,#034b7b 19%,#034d7e 27%,#00558b 100%));
+  @include border-radius(4px);
+  box-shadow: 1px 1px 2px #000 inset, 2px 3px 3px rgba(#fff, 0.09);
+  // width:100%;
   height:30px;
   margin:0 0 0 10px;
   position: relative;
@@ -2247,7 +2262,7 @@ ul.action-links {
     background:transparent;
     border:none;
     margin:3px 0 0 0;
-    width:200px;
+    // width:200px;
   }
   .form-submit {
     background-color:transparent !important;
@@ -3007,15 +3022,17 @@ body.front.not-logged-in {
 }
 
 body.front.logged-in {
-  .panel-pane {
-    @extend %pod;
 
-    > .block-inner {
-      @extend %pod-content;
+  .view-commons-homepage-content {
+    > .view-content {
+      @extend %pod;
+      padding: 10px 10px 20px 10px;
+
+      > .views-row {
+        position: relative;
+      }
     }
-  }
 
-  .pane-commons-homepage-content-panel-pane-1 {
     // background-color:transparent;
     // @include border-radius(0px);
     // @include box-shadow($light_gray 0px 0px 0px);
@@ -3061,7 +3078,7 @@ body.front.logged-in {
       border-top:none;
     }
     .item-list {
-      border-top:1px solid $white;
+      // border-top:1px solid $white;
       padding:10px 0 0 0;      
     }
     // .pager a {
